changed version to 0.6.2-rc1, iface 0, binary 0.
Thu May 20 14:25:03 2004  Tim Janik  <timj@gtk.org>

        * configure.in: changed version to 0.6.2-rc1, iface 0, binary 0.

svn path=/trunk/; revision=2173

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-02-28 14:21+0100\n"
 "Last-Translator: Xavier Conde Rueda <xaviconde@eresmas.com>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
@@ -2568,7 +2568,7 @@ msgstr "Canals de sortida:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Tipus de filtre"
 
 #: bse/bsebiquadfilter.c:124
@@ -2689,7 +2689,7 @@ msgstr "Senyal de so filtrada"
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "Altres f_onts"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2711,9 +2711,43 @@ msgstr "Freqüència"
 msgid "Const Out%u"
 msgstr "Sortida constant%u"
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr "Latència [ms]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+"Duració del processament entre l'entrada i sortida d'una mostra. Els valors "
+"més petits incrementen la càrrega de CPU"
+
+#: bse/bsecore.idl:399
+msgid "Synth Mixing Frequency"
+msgstr "Freqüència de mescla del sintetitzador"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+"Freqüències de mescla de síntesi, els valors comuns són: 22050, 44100, 48000"
+
+#: bse/bsecore.idl:402
+msgid "Synth Control Frequency"
+msgstr "Control de freqüència del sintetitzador"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+"A quina freqüència s'ha d'avaluar el control. Hauria de ser molt més petit "
+"que la freqüència de mescla del sintetitzador per reduir la càrrega de CPU"
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Entrada i sortida"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2744,8 +2778,9 @@ msgid "Velocity while the note is pressed"
 msgstr "Velocitat quan no es prem la nota"
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Entrada i sortida"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2776,8 +2811,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr "Alt indica que l'instrument està sintetizant"
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Entrada i sortida"
 
 #: bse/bsemidicontroller.c:137
 msgid "Ctrl Out1"
@@ -2813,7 +2849,7 @@ msgstr "Senyal MIDI 4"
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Entrada i sortida"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2860,7 +2896,7 @@ msgstr "Sortida desconnexió"
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Entrada i sortida"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2883,7 +2919,7 @@ msgstr "Sortida del canal dret"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Entrada i sortida"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2904,42 +2940,27 @@ msgstr "Entrada de so dreta"
 msgid "Right channel Input"
 msgstr "Entrada del canal dret"
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
-msgstr "Latència [ms]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
-"Duració del processament entre l'entrada i sortida d'una mostra. Els valors "
-"més petits incrementen la càrrega de CPU"
 
-#: bse/bsecore.idl:399
-msgid "Synth Mixing Frequency"
-msgstr "Freqüència de mescla del sintetitzador"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
-"Freqüències de mescla de síntesi, els valors comuns són: 22050, 44100, 48000"
 
-#: bse/bsecore.idl:402
-msgid "Synth Control Frequency"
-msgstr "Control de freqüència del sintetitzador"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
-"A quina freqüència s'ha d'avaluar el control. Hauria de ser molt més petit "
-"que la freqüència de mescla del sintetitzador per reduir la càrrega de CPU"
+
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
+msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Snooper"
 
 #: bse/bsesnooper.c:108
@@ -2960,7 +2981,7 @@ msgstr ""
 
 #: bse/bsestandardosc.c:109
 #, fuzzy
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr "/Mòduls/Fonts de so/Oscil·lador estàndard"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3069,7 +3090,7 @@ msgstr "Sortida de sincronització"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtualització"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3095,7 +3116,7 @@ msgstr "Entrada virtual %u"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtualització"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3109,8 +3130,9 @@ msgid "Virtual output %u"
 msgstr "Sortida virtual %u"
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtualització"
 
 #: bse/bsesubsynth.c:124
 msgid "Synthesis Network"
@@ -3162,7 +3184,7 @@ msgstr "Darrera hora de modificació"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "/Mòduls/Fonts de so/Oscil·lador estàndard"
 
 #: bse/bsewaveosc.c:123
