--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast 0.5.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-01-04 22:01+0100\n"
 "Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
@@ -2636,7 +2636,7 @@ msgstr "Ausgabekanäle:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Filtertyp"
 
 #: bse/bsebiquadfilter.c:124
@@ -2763,7 +2763,7 @@ msgstr "Gefiltertes Audio-Signal"
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "_Weitere Quellen"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2785,9 +2785,41 @@ msgstr "Frequenz"
 msgid "Const Out%u"
 msgstr ""
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+#, fuzzy
+msgid "Latency [ms]"
+msgstr "Ansprechzeit [ms]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+
+#: bse/bsecore.idl:399
+#, fuzzy
+msgid "Synth Mixing Frequency"
+msgstr "Frequenz zentrieren"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+#, fuzzy
+msgid "Synth Control Frequency"
+msgstr "Frequenz zentrieren"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Ein- und Ausgabe"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 #, fuzzy
@@ -2820,8 +2852,9 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Ein- und Ausgabe"
 
 #: bse/bseinstrumentoutput.c:101
 #, fuzzy
@@ -2858,8 +2891,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Ein- und Ausgabe"
 
 #: bse/bsemidicontroller.c:137
 #, fuzzy
@@ -2899,7 +2933,7 @@ msgstr ""
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Ein- und Ausgabe"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2951,7 +2985,7 @@ msgstr ""
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Ein- und Ausgabe"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2976,7 +3010,7 @@ msgstr "Rechte Audio-Ausgabe"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Ein- und Ausgabe"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2999,40 +3033,27 @@ msgstr "Audio-Ein, rechts"
 msgid "Right channel Input"
 msgstr "Rechte Audio-Eingabe"
 
-#: bse/bsecore.idl:395
-#, fuzzy
-msgid "Latency [ms]"
-msgstr "Ansprechzeit [ms]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-#, fuzzy
-msgid "Synth Mixing Frequency"
-msgstr "Frequenz zentrieren"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:402
-#, fuzzy
-msgid "Synth Control Frequency"
-msgstr "Frequenz zentrieren"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
+msgstr ""
 
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Schnüffler"
 
 #: bse/bsesnooper.c:108
@@ -3050,8 +3071,9 @@ msgid ""
 msgstr ""
 
 #: bse/bsestandardosc.c:109
-msgid "Audio Sources/Standard Oscillator"
-msgstr ""
+#, fuzzy
+msgid "/Audio Sources/Standard Oscillator"
+msgstr "_Audio-Quellen"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
 msgid "Wave Form"
@@ -3157,7 +3179,7 @@ msgstr "Synchronisierungsausgabe"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtualisierung"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3182,7 +3204,7 @@ msgstr "Erste Audio-Eingabe"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtualisierung"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3196,8 +3218,9 @@ msgid "Virtual output %u"
 msgstr ""
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtualisierung"
 
 #: bse/bsesubsynth.c:124
 #, fuzzy
@@ -3250,7 +3273,7 @@ msgstr "Datum der letzten Änderung"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "_Audio-Quellen"
 
 #: bse/bsewaveosc.c:123
