--- a/po/es.po
+++ b/po/es.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-04-12 22:33+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
@@ -2538,7 +2538,7 @@ msgstr "Canales de salida:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Tipo de filtro"
 
 #: bse/bsebiquadfilter.c:124
@@ -2659,7 +2659,7 @@ msgstr "Señal de sonido filtrada"
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "_Otras fuentes"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2681,9 +2681,44 @@ msgstr "Frecuencia"
 msgid "Const Out%u"
 msgstr ""
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr "Latencia [ms]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+"Dureción del proceso entre la entrada y la salida de una muestra sencilla, "
+"valores pequeños incrementan la carga de CPU"
+
+#: bse/bsecore.idl:399
+msgid "Synth Mixing Frequency"
+msgstr "Frecuencia de mezcla de síntesis"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+"Frecuencia de mezcla de síntesis, los valores comunes son: 22050, 44100, "
+"48000"
+
+#: bse/bsecore.idl:402
+msgid "Synth Control Frequency"
+msgstr "Frecuencia de control de síntesis"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+"Frecuencia a la que los valores de control se evalúan, debería ser mucho más "
+"pequeño que La Frecuencia de mezcla de síntesis para reducir la carga de CPU"
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Entrada y salida"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2714,8 +2749,9 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Entrada y salida"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2746,8 +2782,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Entrada y salida"
 
 #: bse/bsemidicontroller.c:137
 msgid "Ctrl Out1"
@@ -2783,7 +2820,7 @@ msgstr ""
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Entrada y salida"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2830,7 +2867,7 @@ msgstr ""
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Entrada y salida"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2853,7 +2890,7 @@ msgstr "Salida del canal derecho"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Entrada y salida"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2874,43 +2911,27 @@ msgstr "Entrada de sonido derecha"
 msgid "Right channel Input"
 msgstr "Entrada de sonido derecha"
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
-msgstr "Latencia [ms]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
-"Dureción del proceso entre la entrada y la salida de una muestra sencilla, "
-"valores pequeños incrementan la carga de CPU"
 
-#: bse/bsecore.idl:399
-msgid "Synth Mixing Frequency"
-msgstr "Frecuencia de mezcla de síntesis"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
-"Frecuencia de mezcla de síntesis, los valores comunes son: 22050, 44100, "
-"48000"
 
-#: bse/bsecore.idl:402
-msgid "Synth Control Frequency"
-msgstr "Frecuencia de control de síntesis"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
-"Frecuencia a la que los valores de control se evalúan, debería ser mucho más "
-"pequeño que La Frecuencia de mezcla de síntesis para reducir la carga de CPU"
+
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
+msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Snooper"
 
 #: bse/bsesnooper.c:108
@@ -2931,7 +2952,7 @@ msgstr ""
 
 #: bse/bsestandardosc.c:109
 #, fuzzy
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr "/Módulos/Fuentes de sonido/Oscilador estándar"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3041,7 +3062,7 @@ msgstr "Salida de sincronización"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtualización"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3067,7 +3088,7 @@ msgstr "Entrada virtual %u"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtualización"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3081,8 +3102,9 @@ msgid "Virtual output %u"
 msgstr "Salida virtual %u"
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtualización"
 
 #: bse/bsesubsynth.c:124
 msgid "Synthesis Network"
@@ -3134,7 +3156,7 @@ msgstr "Tiempo de última modificación"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "/Módulos/Fuentes de sonido/Oscilador estándar"
 
 #: bse/bsewaveosc.c:123
