--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast 0.5.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-01-17 23:28+0100\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
@@ -2734,7 +2734,7 @@ msgstr "Niveau de sortie :"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Type de filtres"
 
 #: bse/bsebiquadfilter.c:124
@@ -2858,7 +2858,7 @@ msgstr ""
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "_Autres sources"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2880,9 +2880,41 @@ msgstr "Fréquence"
 msgid "Const Out%u"
 msgstr ""
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+#, fuzzy
+msgid "Latency [ms]"
+msgstr "Pièces jointes"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+
+#: bse/bsecore.idl:399
+#, fuzzy
+msgid "Synth Mixing Frequency"
+msgstr "Règler la fréquence"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+#, fuzzy
+msgid "Synth Control Frequency"
+msgstr "Règler la fréquence"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Entrée & Sortie"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 #, fuzzy
@@ -2915,8 +2947,9 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Entrée & Sortie"
 
 #: bse/bseinstrumentoutput.c:101
 #, fuzzy
@@ -2953,8 +2986,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Entrée & Sortie"
 
 #: bse/bsemidicontroller.c:137
 #, fuzzy
@@ -2994,7 +3028,7 @@ msgstr ""
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Entrée & Sortie"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -3047,7 +3081,7 @@ msgstr ""
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Entrée & Sortie"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -3072,7 +3106,7 @@ msgstr "Texte aligné à droite"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Entrée & Sortie"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -3097,40 +3131,27 @@ msgstr "Aligner à droite"
 msgid "Right channel Input"
 msgstr "Bourrage de droite"
 
-#: bse/bsecore.idl:395
-#, fuzzy
-msgid "Latency [ms]"
-msgstr "Pièces jointes"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-#, fuzzy
-msgid "Synth Mixing Frequency"
-msgstr "Règler la fréquence"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:402
-#, fuzzy
-msgid "Synth Control Frequency"
-msgstr "Règler la fréquence"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
+msgstr ""
 
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Alarme"
 
 #: bse/bsesnooper.c:108
@@ -3148,8 +3169,9 @@ msgid ""
 msgstr ""
 
 #: bse/bsestandardosc.c:109
-msgid "Audio Sources/Standard Oscillator"
-msgstr ""
+#, fuzzy
+msgid "/Audio Sources/Standard Oscillator"
+msgstr "Sources _audio"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
 #, fuzzy
@@ -3260,7 +3282,7 @@ msgstr "Options de synchronisation"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtualisation"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3285,7 +3307,7 @@ msgstr "Premier point"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtualisation"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3299,8 +3321,9 @@ msgid "Virtual output %u"
 msgstr ""
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtualisation"
 
 #: bse/bsesubsynth.c:124
 #, fuzzy
@@ -3356,7 +3379,7 @@ msgstr ", heure de modification"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "Sources _audio"
 
 #: bse/bsewaveosc.c:123
