--- a/po/hr.po
+++ b/po/hr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast 0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-03-20 14:42+CET\n"
 "Last-Translator: auto\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
@@ -2493,7 +2493,7 @@ msgid "Output Channels:"
 msgstr ""
 
 #: bse/bsebiquadfilter.c:105
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr ""
 
 #: bse/bsebiquadfilter.c:124
@@ -2610,7 +2610,7 @@ msgid "Filtered Audio Signal"
 msgstr ""
 
 #: bse/bseconstant.c:84
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr ""
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2632,8 +2632,36 @@ msgstr "Frekvencija"
 msgid "Const Out%u"
 msgstr ""
 
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr ""
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
+msgstr ""
+
+#: bse/bsecore.idl:399
+msgid "Synth Mixing Frequency"
+msgstr "Učestalost sinkronizacije miješanja"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+msgid "Synth Control Frequency"
+msgstr "Učestalost sinkronizacija kontrole"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
 #: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+msgid "/Input & Output/Instrument Voice Input"
 msgstr ""
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
@@ -2665,7 +2693,7 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
+msgid "/Input & Output/Instrument Output"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:101
@@ -2697,7 +2725,7 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
+msgid "/Input & Output/MIDI Control Input"
 msgstr ""
 
 #: bse/bsemidicontroller.c:137
@@ -2733,7 +2761,7 @@ msgid "MIDI Signal 4"
 msgstr ""
 
 #: bse/bsemidiinput.c:82
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr ""
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2779,7 +2807,7 @@ msgid "Disconnect Out"
 msgstr ""
 
 #: bse/bsepcminput.c:85
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr ""
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2801,7 +2829,7 @@ msgid "Right channel output"
 msgstr ""
 
 #: bse/bsepcmoutput.c:85
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr ""
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2822,36 +2850,26 @@ msgstr ""
 msgid "Right channel Input"
 msgstr ""
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-msgid "Synth Mixing Frequency"
-msgstr "Učestalost sinkronizacije miješanja"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
 
-#: bse/bsecore.idl:402
-msgid "Synth Control Frequency"
-msgstr "Učestalost sinkronizacija kontrole"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr ""
 
 #: bse/bsesnooper.c:108
@@ -2869,7 +2887,7 @@ msgid ""
 msgstr ""
 
 #: bse/bsestandardosc.c:109
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr ""
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -2973,7 +2991,7 @@ msgid "Syncronization Output"
 msgstr ""
 
 #: bse/bsesubiport.c:90
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr ""
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -2996,7 +3014,7 @@ msgid "Virtual input %u"
 msgstr ""
 
 #: bse/bsesuboport.c:90
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr ""
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3010,7 +3028,7 @@ msgid "Virtual output %u"
 msgstr ""
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
+msgid "/Virtualization/Virtual Sub Synth"
 msgstr ""
 
 #: bse/bsesubsynth.c:124
@@ -3062,7 +3080,7 @@ msgid "Last modification time"
 msgstr ""
 
 #: bse/bsewaveosc.c:97
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr ""
 
 #: bse/bsewaveosc.c:123
