--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-05-16 16:35+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
@@ -2554,7 +2554,7 @@ msgstr "Canais de Saída:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Tipo de Filtro"
 
 #: bse/bsebiquadfilter.c:124
@@ -2674,7 +2674,7 @@ msgstr "Sinal Audio Filtrado"
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "_Outras Fontes"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2696,9 +2696,45 @@ msgstr "Frequência"
 msgid "Const Out%u"
 msgstr "Saída Constante %u"
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr "Latência [ms]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+"Duração de processamento entre a entrada e a saída de uma única amostra, "
+"valores menores aumentam a carga de CPU"
+
+#: bse/bsecore.idl:399
+msgid "Synth Mixing Frequency"
+msgstr "Frequência de Mistura do Sintetizador"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+"Frequência de mistura do sintetizador, valores comuns são: 22050, 44100, "
+"48000"
+
+#: bse/bsecore.idl:402
+msgid "Synth Control Frequency"
+msgstr "Frequência de Controlo de Sintetização"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+"Frequência a que são avaliados os valores de controlo, deverá ser muito "
+"menor do que a Frequência de Mistura do Sintetizador para reduzir a carga no "
+"CPU"
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Entrada & Saída"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2729,8 +2765,9 @@ msgid "Velocity while the note is pressed"
 msgstr "Velocidade durante a pressão da nota"
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Entrada & Saída"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2761,8 +2798,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr "Alta indica que o instrumento terminou a sintetização"
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Entrada & Saída"
 
 #: bse/bsemidicontroller.c:137
 msgid "Ctrl Out1"
@@ -2798,7 +2836,7 @@ msgstr "Sinal MIDI 4"
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Entrada & Saída"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2845,7 +2883,7 @@ msgstr "Desligar de Saída"
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Entrada & Saída"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2868,7 +2906,7 @@ msgstr "Canal de saída direito"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Entrada & Saída"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2889,44 +2927,27 @@ msgstr "Entrada Audio Direita"
 msgid "Right channel Input"
 msgstr "Entrada de canal Direita"
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
-msgstr "Latência [ms]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
-"Duração de processamento entre a entrada e a saída de uma única amostra, "
-"valores menores aumentam a carga de CPU"
 
-#: bse/bsecore.idl:399
-msgid "Synth Mixing Frequency"
-msgstr "Frequência de Mistura do Sintetizador"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
-"Frequência de mistura do sintetizador, valores comuns são: 22050, 44100, "
-"48000"
 
-#: bse/bsecore.idl:402
-msgid "Synth Control Frequency"
-msgstr "Frequência de Controlo de Sintetização"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
-"Frequência a que são avaliados os valores de controlo, deverá ser muito "
-"menor do que a Frequência de Mistura do Sintetizador para reduzir a carga no "
-"CPU"
+
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
+msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Snooper"
 
 #: bse/bsesnooper.c:108
@@ -2947,7 +2968,7 @@ msgstr ""
 
 #: bse/bsestandardosc.c:109
 #, fuzzy
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr "/Módulos/Fontes Audio/Oscilador Standard"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3056,7 +3077,7 @@ msgstr "Saída de Sincronização"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtualização"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3082,7 +3103,7 @@ msgstr "Entrada virtual %u"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtualização"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3096,8 +3117,9 @@ msgid "Virtual output %u"
 msgstr "Saída virtual %u"
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtualização"
 
 #: bse/bsesubsynth.c:124
 msgid "Synthesis Network"
@@ -3149,7 +3171,7 @@ msgstr "Data da última alteração"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "/Módulos/Fontes Audio/Oscilador Standard"
 
 #: bse/bsewaveosc.c:123
