--- a/po/ru.po
+++ b/po/ru.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-04-28 21:48+0300\n"
 "Last-Translator: Alexandre Prokoudine <techwriter@land.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
@@ -2566,7 +2566,7 @@ msgstr "Каналы выхода:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Тип фильтра"
 
 #: bse/bsebiquadfilter.c:124
@@ -2684,7 +2684,7 @@ msgstr ""
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "Дру_гие источники"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2706,9 +2706,39 @@ msgstr "Частота"
 msgid "Const Out%u"
 msgstr ""
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr "Задержка [мс]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+
+#: bse/bsecore.idl:399
+msgid "Synth Mixing Frequency"
+msgstr ""
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+#, fuzzy
+msgid "Synth Control Frequency"
+msgstr "Вставить контрольное событие"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Вход и выход"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2740,8 +2770,9 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Вход и выход"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2773,8 +2804,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Вход и выход"
 
 #: bse/bsemidicontroller.c:137
 #, fuzzy
@@ -2814,7 +2846,7 @@ msgstr "MIDI Signal 4"
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Вход и выход"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2867,7 +2899,7 @@ msgstr ""
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Вход и выход"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2890,7 +2922,7 @@ msgstr ""
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Вход и выход"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2911,38 +2943,27 @@ msgstr ""
 msgid "Right channel Input"
 msgstr ""
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
-msgstr "Задержка [мс]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-msgid "Synth Mixing Frequency"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
 
-#: bse/bsecore.idl:402
-#, fuzzy
-msgid "Synth Control Frequency"
-msgstr "Вставить контрольное событие"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Снупер"
 
 #: bse/bsesnooper.c:108
@@ -2961,7 +2982,7 @@ msgstr ""
 
 #: bse/bsestandardosc.c:109
 #, fuzzy
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr "/Модули/Источники звука/Стандартный осциллятор"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3068,7 +3089,7 @@ msgstr ""
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Виртуализация"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3093,7 +3114,7 @@ msgstr "Виртуальный вход %u"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Виртуализация"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3107,8 +3128,9 @@ msgid "Virtual output %u"
 msgstr "Виртуальный выход %u"
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Виртуализация"
 
 #: bse/bsesubsynth.c:124
 #, fuzzy
@@ -3161,7 +3183,7 @@ msgstr "Последнее изменение"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "/Модули/Источники звука/Стандартный осциллятор"
 
 #: bse/bsewaveosc.c:123
