--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: beast\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2004-02-27 22:42+0100\n"
 "Last-Translator: Danilo Šegan <danilo@prevod.org>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
@@ -2586,7 +2586,7 @@ msgstr "Izlazni kanali:"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Vrsta filtera"
 
 #: bse/bsebiquadfilter.c:124
@@ -2706,7 +2706,7 @@ msgstr "Filtrirani zvučni signal"
 
 #: bse/bseconstant.c:84
 #, fuzzy
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr "_Ostali izvori"
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2728,9 +2728,41 @@ msgstr "Učestanost"
 msgid "Const Out%u"
 msgstr "Konst. iz.%u"
 
-#: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+#: bse/bsecore.idl:395
+#, fuzzy
+msgid "Latency [ms]"
+msgstr "Napad [ms]"
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
 msgstr ""
+
+#: bse/bsecore.idl:399
+#, fuzzy
+msgid "Synth Mixing Frequency"
+msgstr "Središnja učestanost"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+#, fuzzy
+msgid "Synth Control Frequency"
+msgstr "Središnja učestanost"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
+#: bse/bseinstrumentinput.c:68
+#, fuzzy
+msgid "/Input & Output/Instrument Voice Input"
+msgstr "_Ulaz i izlaz"
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
 msgid "Note Frequency"
@@ -2761,8 +2793,9 @@ msgid "Velocity while the note is pressed"
 msgstr "Brzina dok je nota pritisnuta"
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/Instrument Output"
+msgstr "_Ulaz i izlaz"
 
 #: bse/bseinstrumentoutput.c:101
 msgid "Left Audio"
@@ -2793,8 +2826,9 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr "Visoko označava da je instrument završio sa sintezom"
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
-msgstr ""
+#, fuzzy
+msgid "/Input & Output/MIDI Control Input"
+msgstr "_Ulaz i izlaz"
 
 #: bse/bsemidicontroller.c:137
 msgid "Ctrl Out1"
@@ -2830,7 +2864,7 @@ msgstr "MIDI signal 4"
 
 #: bse/bsemidiinput.c:82
 #, fuzzy
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr "_Ulaz i izlaz"
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2877,7 +2911,7 @@ msgstr "Iz. isključen"
 
 #: bse/bsepcminput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr "_Ulaz i izlaz"
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -2900,7 +2934,7 @@ msgstr "Izlaz desnog kanala"
 
 #: bse/bsepcmoutput.c:85
 #, fuzzy
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr "_Ulaz i izlaz"
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -2921,40 +2955,27 @@ msgstr "Desni ulaz zvuka"
 msgid "Right channel Input"
 msgstr "Ulaz desnog kanala"
 
-#: bse/bsecore.idl:395
-#, fuzzy
-msgid "Latency [ms]"
-msgstr "Napad [ms]"
-
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-#, fuzzy
-msgid "Synth Mixing Frequency"
-msgstr "Središnja učestanost"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:402
-#, fuzzy
-msgid "Synth Control Frequency"
-msgstr "Središnja učestanost"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
+msgstr ""
 
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
 #, fuzzy
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr "Njuškalo"
 
 #: bse/bsesnooper.c:108
@@ -2975,7 +2996,7 @@ msgstr ""
 
 #: bse/bsestandardosc.c:109
 #, fuzzy
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr "/Moduli/Izvori zvuka/Standardni oscilator"
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3085,7 +3106,7 @@ msgstr "Usklađeni izlaz"
 
 #: bse/bsesubiport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr "_Virtuelizacija"
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3111,7 +3132,7 @@ msgstr "Virtuelni ulaz %u"
 
 #: bse/bsesuboport.c:90
 #, fuzzy
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr "_Virtuelizacija"
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3125,8 +3146,9 @@ msgid "Virtual output %u"
 msgstr "Virtuelni izlaz %u"
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
-msgstr ""
+#, fuzzy
+msgid "/Virtualization/Virtual Sub Synth"
+msgstr "_Virtuelizacija"
 
 #: bse/bsesubsynth.c:124
 msgid "Synthesis Network"
@@ -3178,7 +3200,7 @@ msgstr "Vreme poslednje izmene"
 
 #: bse/bsewaveosc.c:97
 #, fuzzy
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr "/Moduli/Izvori zvuka/Standardni oscilator"
 
 #: bse/bsewaveosc.c:123
