--- a/po/el.po
+++ b/po/el.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-20 19:37+0200\n"
+"POT-Creation-Date: 2004-05-20 20:11+0200\n"
 "PO-Revision-Date: 2003-11-09 18:32+0200\n"
 "Last-Translator: Kostas Papadimas <pkst@gnome.org>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
@@ -2684,7 +2684,7 @@ msgstr "'Εξοδος"
 
 #: bse/bsebiquadfilter.c:105
 #, fuzzy
-msgid "Filters/Biquad Types"
+msgid "/Filters/Biquad Types"
 msgstr "Τύπος φίλτρου"
 
 #: bse/bsebiquadfilter.c:124
@@ -2807,7 +2807,7 @@ msgid "Filtered Audio Signal"
 msgstr "Σινιάλο ήχου με φίλτρο"
 
 #: bse/bseconstant.c:84
-msgid "Other Sources/Constant"
+msgid "/Other Sources/Constant"
 msgstr ""
 
 #: bse/bseconstant.c:106 bse/bseconstant.c:137
@@ -2830,8 +2830,38 @@ msgstr "Συχνότητα κέντρου"
 msgid "Const Out%u"
 msgstr ""
 
+#: bse/bsecore.idl:395
+msgid "Latency [ms]"
+msgstr ""
+
+#: bse/bsecore.idl:396
+msgid ""
+"Processing duration between input and output of a single sample, smaller "
+"values increase CPU load"
+msgstr ""
+
+#: bse/bsecore.idl:399
+#, fuzzy
+msgid "Synth Mixing Frequency"
+msgstr "Συχνότητα κέντρου"
+
+#: bse/bsecore.idl:400
+msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+msgstr ""
+
+#: bse/bsecore.idl:402
+#, fuzzy
+msgid "Synth Control Frequency"
+msgstr "Συχνότητα κέντρου"
+
+#: bse/bsecore.idl:403
+msgid ""
+"Frequency at which control values are evaluated, should be much smaller than "
+"Synth Mixing Frequency to reduce CPU load"
+msgstr ""
+
 #: bse/bseinstrumentinput.c:68
-msgid "Input & Output/Instrument Voice Input"
+msgid "/Input & Output/Instrument Voice Input"
 msgstr ""
 
 #: bse/bseinstrumentinput.c:101 bse/bsemidiinput.c:109
@@ -2865,7 +2895,7 @@ msgid "Velocity while the note is pressed"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:68
-msgid "Input & Output/Instrument Output"
+msgid "/Input & Output/Instrument Output"
 msgstr ""
 
 #: bse/bseinstrumentoutput.c:101
@@ -2902,7 +2932,7 @@ msgid "High indicates the instrument is done synthesizing"
 msgstr ""
 
 #: bse/bsemidicontroller.c:86
-msgid "Input & Output/MIDI Control Input"
+msgid "/Input & Output/MIDI Control Input"
 msgstr ""
 
 #: bse/bsemidicontroller.c:137
@@ -2942,7 +2972,7 @@ msgid "MIDI Signal 4"
 msgstr ""
 
 #: bse/bsemidiinput.c:82
-msgid "Input & Output/MIDI Voice Input"
+msgid "/Input & Output/MIDI Voice Input"
 msgstr ""
 
 #: bse/bsemidivoice.c:109 plugins/bsesequencer.c:107
@@ -2995,7 +3025,7 @@ msgid "Disconnect Out"
 msgstr ""
 
 #: bse/bsepcminput.c:85
-msgid "Input & Output/PCM Input"
+msgid "/Input & Output/PCM Input"
 msgstr ""
 
 #: bse/bsepcminput.c:128 plugins/artscompressor.idl:51
@@ -3017,7 +3047,7 @@ msgid "Right channel output"
 msgstr ""
 
 #: bse/bsepcmoutput.c:85
-msgid "Input & Output/PCM Output"
+msgid "/Input & Output/PCM Output"
 msgstr ""
 
 #: bse/bsepcmoutput.c:128 plugins/artscompressor.idl:49
@@ -3040,38 +3070,26 @@ msgstr ""
 msgid "Right channel Input"
 msgstr "Κανάλι εισόδου σε χρήση"
 
-#: bse/bsecore.idl:395
-msgid "Latency [ms]"
+#: bse/bseserver.c:503
+msgid "Advice about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:396
-msgid ""
-"Processing duration between input and output of a single sample, smaller "
-"values increase CPU load"
+#: bse/bseserver.c:504
+msgid "Alert me about MIDI device selections"
 msgstr ""
 
-#: bse/bsecore.idl:399
-#, fuzzy
-msgid "Synth Mixing Frequency"
-msgstr "Συχνότητα κέντρου"
-
-#: bse/bsecore.idl:400
-msgid "Synthesis mixing frequency, common values are: 22050, 44100, 48000"
+#: bse/bseserver.c:505
+#, c-format
+msgid "failed to open midi device %s (reverting to null device): %s"
 msgstr ""
 
-#: bse/bsecore.idl:402
-#, fuzzy
-msgid "Synth Control Frequency"
-msgstr "Συχνότητα κέντρου"
-
-#: bse/bsecore.idl:403
-msgid ""
-"Frequency at which control values are evaluated, should be much smaller than "
-"Synth Mixing Frequency to reduce CPU load"
+#: bse/bseserver.c:547
+#, c-format
+msgid "failed to open output file \"%s\": %s"
 msgstr ""
 
 #: bse/bsesnooper.c:77
-msgid "Misc/Snooper"
+msgid "/Misc/Snooper"
 msgstr ""
 
 #: bse/bsesnooper.c:108
@@ -3089,7 +3107,7 @@ msgid ""
 msgstr ""
 
 #: bse/bsestandardosc.c:109
-msgid "Audio Sources/Standard Oscillator"
+msgid "/Audio Sources/Standard Oscillator"
 msgstr ""
 
 #: bse/bsestandardosc.c:130 bse/bsestandardosc.c:136
@@ -3207,7 +3225,7 @@ msgid "Syncronization Output"
 msgstr ""
 
 #: bse/bsesubiport.c:90
-msgid "Virtualization/Virtual Input"
+msgid "/Virtualization/Virtual Input"
 msgstr ""
 
 #: bse/bsesubiport.c:122 bse/bsesubsynth.c:132
@@ -3231,7 +3249,7 @@ msgid "Virtual input %u"
 msgstr ""
 
 #: bse/bsesuboport.c:90
-msgid "Virtualization/Virtual Output"
+msgid "/Virtualization/Virtual Output"
 msgstr ""
 
 #: bse/bsesuboport.c:122 bse/bsesubsynth.c:142
@@ -3245,7 +3263,7 @@ msgid "Virtual output %u"
 msgstr ""
 
 #: bse/bsesubsynth.c:97
-msgid "Virtualization/Virtual Sub Synth"
+msgid "/Virtualization/Virtual Sub Synth"
 msgstr ""
 
 #: bse/bsesubsynth.c:124
@@ -3298,7 +3316,7 @@ msgid "Last modification time"
 msgstr "Ώρα τελευταίας τροποποίησης"
 
 #: bse/bsewaveosc.c:97
-msgid "Audio Sources/Wave Oscillator"
+msgid "/Audio Sources/Wave Oscillator"
 msgstr ""
 
 #: bse/bsewaveosc.c:123
