--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -21,26 +21,26 @@ overall track keeping, the release specific
 @beast is being translated into various different languages. Status of individual
 translations can be obtained from the following pages.
 
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/index.html,, Translation statistics for the gnome-2.6 release: }
+@uref{http://l10n-status.gnome.org/gnome-2.8/index.html,, Translation statistics for the gnome-2.8 release: }
 @c status page links to all translations listed in ALL_LINGUAS:
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/az/extras/index.html,, az},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/ca/extras/index.html,, ca},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/cs/extras/index.html,, cs},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/de/extras/index.html,, de},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/el/extras/index.html,, el},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/en_CA/extras/index.html,, en_CA},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/en_GB/extras/index.html,, en_GB},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/es/extras/index.html,, es},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/fr/extras/index.html,, fr},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/hr/extras/index.html,, hr},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/mn/extras/index.html,, mn},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/nl/extras/index.html,, nl},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/pt/extras/index.html,, pt},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sq/extras/index.html,, sq},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sr/extras/index.html,, sr},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sr/extras/index.html,, sr@@Latn},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sv/extras/index.html,, sv},
-@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/ru/extras/index.html,, ru}
+@uref{http://l10n-status.gnome.org/gnome-2.8/az/extras/index.html,, az},
+@uref{http://l10n-status.gnome.org/gnome-2.8/ca/extras/index.html,, ca},
+@uref{http://l10n-status.gnome.org/gnome-2.8/cs/extras/index.html,, cs},
+@uref{http://l10n-status.gnome.org/gnome-2.8/de/extras/index.html,, de},
+@uref{http://l10n-status.gnome.org/gnome-2.8/el/extras/index.html,, el},
+@uref{http://l10n-status.gnome.org/gnome-2.8/en_CA/extras/index.html,, en_CA},
+@uref{http://l10n-status.gnome.org/gnome-2.8/en_GB/extras/index.html,, en_GB},
+@uref{http://l10n-status.gnome.org/gnome-2.8/es/extras/index.html,, es},
+@uref{http://l10n-status.gnome.org/gnome-2.8/fr/extras/index.html,, fr},
+@uref{http://l10n-status.gnome.org/gnome-2.8/hr/extras/index.html,, hr},
+@uref{http://l10n-status.gnome.org/gnome-2.8/mn/extras/index.html,, mn},
+@uref{http://l10n-status.gnome.org/gnome-2.8/nl/extras/index.html,, nl},
+@uref{http://l10n-status.gnome.org/gnome-2.8/pt/extras/index.html,, pt},
+@uref{http://l10n-status.gnome.org/gnome-2.8/sq/extras/index.html,, sq},
+@uref{http://l10n-status.gnome.org/gnome-2.8/sr/extras/index.html,, sr},
+@uref{http://l10n-status.gnome.org/gnome-2.8/sr/extras/index.html,, sr@@Latn},
+@uref{http://l10n-status.gnome.org/gnome-2.8/sv/extras/index.html,, sv},
+@uref{http://l10n-status.gnome.org/gnome-2.8/ru/extras/index.html,, ru}
 
 
 @unnumbered Web Site Development
